--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ 
+ class="d-block w-60"
  */
 
 
@@ -27,15 +29,32 @@
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
-  font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: brown;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+.map-container {
+	margin-left:auto;
+	margin-right:auto;
+	justify-content: center;    /* Centra horizontalmente */
+    align-items: center;    
+    width: 100%;
+    max-width: 800px;  /* Tamaño máximo del mapa */
+    padding: 20px;
+    background-color: white;  /* Fondo blanco alrededor del iframe */
+    border-radius: 8px;       /* Esquinas redondeadas */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+    text-align: center;
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    border-radius: 8px; /* Esquinas redondeadas */
+}
+
 
 hr {
   margin: 1rem 0;
